--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SnappyBird.Tests\packages.config" />
   <repository path="..\SnappyBird\packages.config" />
+  <repository path="..\src\packages.config" />
 </repositories>
