--- a/src/SnappyBird.fsproj
+++ b/src/SnappyBird.fsproj
@@ -52,8 +52,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="TweetSharp">
       <HintPath>..\packages\TweetSharp.2.0.6\lib\4.0\TweetSharp.dll</HintPath>
