--- a/src/SnappyBird.fsproj
+++ b/src/SnappyBird.fsproj
@@ -38,6 +38,7 @@
     <Compile Include="Twitter.fs" />
     <Compile Include="Output.fs" />
     <Compile Include="Bot.fs" />
+    <Compile Include="PuttingItTogether.fs" />
     <None Include="Script.fsx" />
     <Content Include="ToDo.txt" />
     <None Include="packages.config" />
